-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.3, 6.3.0 Beta2
-
None
-
Ubuntu 20.04 LTS
-
41a9e9fc8f (qt/qtbase/6.2) 41a9e9fc8f (qt/tqtc-qtbase/6.2) 7c88d9c18e (qt/qtbase/6.3) 7c88d9c18e (qt/tqtc-qtbase/6.3) 7c88d9c18e (qt/tqtc-qtbase/6.3.0)
- Open the attached svg image.
- Try zooming in by holding "Ctrl" and pressing "+".
Creator crashes. On the command line, you can read "Floating point exception".
- relates to
-
QTBUG-95239 Massive memory consumption when rendering small svg
-
- Closed
-
| For Gerrit Dashboard: QTBUG-101581 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 399074,8 | QStyle: Fix overflows and crash when converting slider positions | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 399435,4 | ManhattanStyle: Avoid crash when zooming invalid image | 7.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 399834,2 | QStyle: Fix overflows and crash when converting slider positions | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
| 399835,2 | QStyle: Fix overflows and crash when converting slider positions | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |