QStyle: Fix overflows and crash when converting slider positions

Qt Creator crashes when max is INT_MAX and min is -1, see bugreport.

Change-Id: I441e76c0ff87052083ed3d77e6085b186402e5d8
Fixes: QTBUG-101581
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 4b49c2006f3a0e957d0c5d8c09f32c4ea321885a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>